--- a/css/variables.css
+++ b/css/variables.css
@@ -4,4 +4,11 @@
   --bold-font: 700;
 
   /*Global Colors*/
+  --white: #ffffff;
+  --black: #18191f;
+  --blue-bg: #2d25a0;
+
+  /*Button Color*/
+  --btn-normal-bg: #e02c6d;
+  --btn-hover-bg: #18191f;
 }
