--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 /* Import CSS stylesheet       */
 /*******************************/
 @import url("/css/variables.css");
+@import url("css/reset.css");
 
 /*******************************/
 /* Reset Default style in HTML */
@@ -17,6 +18,9 @@ body {
   font-size: 16px;
   line-height: 26px;
   font-weight: var(--regular-font);
+  margin: 0;
+  padding: 0;
+  border: 0;
 }
 img {
   max-width: 100%;
