--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
   border: 0;
 }
 img {
-  max-width: 100%;
+  width: 100%;
   height: auto;
 }
 
@@ -37,7 +37,6 @@ h3 {
 .container {
   width: 1200px;
   margin: 0 auto;
-  /* overflow: hidden; */
 }
 
 .grid-col-2 {
@@ -95,7 +94,7 @@ nav.main-menu ul li {
 }
 
 a.btn-button i.fa-sign-in-alt {
-  margin-left: 10px;
+  margin-right: 10px;
 }
 
 /*******************************/
@@ -112,6 +111,136 @@ a.btn-button i.fa-sign-in-alt {
   padding-right: 100px;
 }
 
+.hero-area .float-right img:hover {
+  transform: scale(1.1);
+}
+
+.hero-area .float-right img {
+  transition: 0.5s;
+}
+.hero-area .float-right img {
+  animation: animationFrames linear 1s;
+  animation-iteration-count: 1;
+  transform-origin: 50% 0%;
+  -webkit-animation: animationFrames linear 1s;
+  -webkit-animation-iteration-count: 1;
+  -webkit-transform-origin: 50% 0%;
+  -moz-animation: animationFrames linear 1s;
+  -moz-animation-iteration-count: 1;
+  -moz-transform-origin: 50% 0%;
+  -o-animation: animationFrames linear 1s;
+  -o-animation-iteration-count: 1;
+  -o-transform-origin: 50% 0%;
+  -ms-animation: animationFrames linear 1s;
+  -ms-animation-iteration-count: 1;
+  -ms-transform-origin: 50% 0%;
+}
+
+@keyframes animationFrames {
+  0% {
+    transform: rotate(0deg);
+  }
+  20% {
+    transform: rotate(15deg);
+  }
+  40% {
+    transform: rotate(-10deg);
+  }
+  60% {
+    transform: rotate(5deg);
+  }
+  80% {
+    transform: rotate(-5deg);
+  }
+  100% {
+    transform: rotate(-5deg);
+  }
+}
+
+@-moz-keyframes animationFrames {
+  0% {
+    -moz-transform: rotate(0deg);
+  }
+  20% {
+    -moz-transform: rotate(15deg);
+  }
+  40% {
+    -moz-transform: rotate(-10deg);
+  }
+  60% {
+    -moz-transform: rotate(5deg);
+  }
+  80% {
+    -moz-transform: rotate(-5deg);
+  }
+  100% {
+    -moz-transform: rotate(-5deg);
+  }
+}
+
+@-webkit-keyframes animationFrames {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  20% {
+    -webkit-transform: rotate(15deg);
+  }
+  40% {
+    -webkit-transform: rotate(-10deg);
+  }
+  60% {
+    -webkit-transform: rotate(5deg);
+  }
+  80% {
+    -webkit-transform: rotate(-5deg);
+  }
+  100% {
+    -webkit-transform: rotate(-5deg);
+  }
+}
+
+@-o-keyframes animationFrames {
+  0% {
+    -o-transform: rotate(0deg);
+  }
+  20% {
+    -o-transform: rotate(15deg);
+  }
+  40% {
+    -o-transform: rotate(-10deg);
+  }
+  60% {
+    -o-transform: rotate(5deg);
+  }
+  80% {
+    -o-transform: rotate(-5deg);
+  }
+  100% {
+    -o-transform: rotate(-5deg);
+  }
+}
+
+@-ms-keyframes animationFrames {
+  0% {
+    -ms-transform: rotate(0deg);
+  }
+  20% {
+    -ms-transform: rotate(15deg);
+  }
+  40% {
+    -ms-transform: rotate(-10deg);
+  }
+  60% {
+    -ms-transform: rotate(5deg);
+  }
+  80% {
+    -ms-transform: rotate(-5deg);
+  }
+  100% {
+    -ms-transform: rotate(-5deg);
+  }
+}
+
 .hero-area h1 {
   font-size: 64px;
   line-height: 80px;
@@ -123,43 +252,54 @@ a.btn-button i.fa-sign-in-alt {
 /* Players Area                */
 /*******************************/
 
-section.players-area {
+section.players-area,
+section.services-area {
   padding: 70px 0;
 }
 
-.players-area .all-players {
+.players-area .all-players,
+.services-area .all-services {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 30px;
 }
 
-.all-players .single-player {
+.all-players .single-player,
+.all-services .single-services {
   padding: 20px;
   box-shadow: 0px 0px 17px 3px #7b7b7b29;
 }
 
-.single-player h2 {
+.single-player h2,
+.single-services h2 {
   font-size: 28px;
   line-height: 40px;
   margin: 10px 0;
 }
 
-/*******************************/
-/* Hilights Area                */
-/*******************************/
+/**********************************/
+/* Hilights Area and Live Streme  */
+/**********************************/
 
-section.hilights-area {
+section.hilights-area,
+section.live-area {
   padding: 70px 0;
 }
 
-.hilights-area h2 {
+.hilights-area h2,
+.live-area h2 {
   font-size: 48px;
   line-height: 60px;
   margin-bottom: 30px;
 }
 
-.hilights-area p {
+.hilights-area p,
+.live-area p {
   margin-bottom: 30px;
+}
+
+section.live-area .float-right {
+  padding-left: 120px;
 }
 
 .hilights-area .float-left {
@@ -167,7 +307,22 @@ section.hilights-area {
 }
 
 /*******************************/
-/* Footer Area                */
+/* Services Area               */
+/*******************************/
+
+.section-header {
+  text-align: center;
+  padding-bottom: 50px;
+}
+
+.section-header h2 {
+  font-size: 48px;
+  line-height: 60px;
+  margin-bottom: 15px;
+}
+
+/*******************************/
+/* Footer Area                 */
 /*******************************/
 
 footer.footer-area {
@@ -208,4 +363,136 @@ footer.footer-area {
 
 .footer-area p {
   margin-top: 20px;
+}
+
+/*******************************/
+/* Responsive Area                */
+/*******************************/
+
+@media only screen and (max-width: 1024px) {
+  .inner-header-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--blue-bg);
+    padding: 16px 20px;
+    margin-bottom: -50px;
+    margin-top: -46px;
+  }
+
+  section.hero-area {
+    margin: 0;
+    padding: 0;
+  }
+
+  .hero-area .container.grid-col-2 {
+    background-color: var(--blue-bg);
+    padding: 120px 0;
+  }
+  section.live-area .float-right {
+    padding-left: 20px;
+  }
+
+  footer.footer-area img {
+    width: 50%;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .inner-header-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--blue-bg);
+    padding: 16px 20px;
+    margin-bottom: -50px;
+    margin-top: -46px;
+  }
+
+  section.hero-area {
+    margin: 0;
+    padding: 0;
+  }
+  .grid-col-2 {
+    grid-template-columns: 1fr 1fr;
+    text-align: center;
+  }
+  .hero-area .container.grid-col-2 {
+    background-color: var(--blue-bg);
+    padding: 120px 0;
+  }
+  .players-area .all-players {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  footer.footer-area img {
+    width: 50%;
+  }
+  section.live-area .float-right {
+    padding-left: 20px;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  .container {
+    width: 600px;
+    margin: 0 auto;
+  }
+
+  .hero-area {
+    background-color: var(--blue-bg);
+    padding: 0;
+    margin-top: 0px;
+  }
+
+  .header-area {
+    display: none;
+  }
+
+  .hero-area .container.grid-col-2 {
+    background: #2d25a0;
+    padding: 120px 0;
+  }
+
+  section.hero-area .float-left {
+    text-align: left;
+    padding-right: 0;
+  }
+
+  .grid-col-2 {
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+
+  .players-area .all-players,
+  .services-area .all-services {
+    grid-template-columns: 1fr;
+    margin: 0 20px;
+  }
+
+  .all-players .single-player {
+    margin: 0 30px;
+  }
+
+  .float-left {
+    padding: 30px;
+  }
+  .float-right {
+    padding: 30px;
+  }
+
+  .hilights-area .float-left {
+    padding-right: 30px;
+  }
+
+  section.hilights-area {
+    padding: 10px 0;
+  }
+
+  section.live-area .float-right {
+    padding-left: 20px;
+  }
+  footer.footer-area img {
+    width: 50%;
+  }
 }
