--- a/style.css
+++ b/style.css
@@ -1,8 +1,20 @@
 /*******************************/
-/* Import CSS stylesheet       */
+/* CSS Variables       */
 /*******************************/
-@import url("/css/variables.css");
-@import url("css/reset.css");
+:root {
+  /*Font Weight*/
+  --regular-font: 400;
+  --bold-font: 700;
+
+  /*Global Colors*/
+  --white: #ffffff;
+  --black: #18191f;
+  --blue-bg: #2d25a0;
+
+  /*Button Color*/
+  --btn-normal-bg: #e02c6d;
+  --btn-hover-bg: #18191f;
+}
 
 /*******************************/
 /* Reset Default style in HTML */
