--- a/style.css
+++ b/style.css
@@ -446,10 +446,10 @@ footer.footer-area {
 }
 
 @media only screen and (max-width: 450px) {
-  .container {
-    width: 600px;
+  /* .container {
+     width: 600px; 
     margin: 0 auto;
-  }
+  } */
 
   .hero-area {
     background-color: var(--blue-bg);
